@@ -13,7 +13,7 @@
 // HBL stubs
 // If this value is changed, you should also change it in imports.config
 // Should get rid of this
-#define NUM_HBL_IMPORTS 0x19 
+#define NUM_HBL_IMPORTS 0x1B 
 
 // IMPORTANT: (0x00014000 - SCRATCHPAD_STUBS_START) / 8 should be > NUM_HBL_IMPORTS
 
